@@ -72,6 +72,7 @@ export(
        "multicomp.plot",
        "mcplot",
        "pfround",
+       "predict.bayesglm",
        "rescale",
        "residual.plot",
        "se.coef",
@@ -88,3 +89,4 @@ S3method(extractAIC, mer)
 S3method(print, GO)
 S3method(plot, balance)
 S3method(print, balance)
+S3method(predict, bayesglm)
